# rein-graph

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: code-guide.md
examples/: checkpoint.py  control_flow.py  error_handling.py  fanout.py  hitl.py  sequential.py  streaming.py  subgraph.py
src/reingraph/: __init__.py  compiled.py  config.py  edges.py  engine.py  graph.py  log.py  nodes.py  py.typed  result.py  session.py  state.py  store.py  stream.py  viz.py
tests/: test_checkpoint.py  test_conditional.py  test_engine_sequential.py  test_graph_build.py  test_hitl.py  test_log.py  test_node_error.py  test_node_policy.py  test_nodes.py  test_observability.py  test_parallel.py  test_smoke.py  test_state.py  test_stream.py  test_subgraph.py  test_viz.py
