[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rein-graph"
version = "0.1.0"
description = "图编排框架:把多个 rein agent 编排成有状态的图工作流(条件分支/循环/并行/HITL),内核复用 rein"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Rein Authors" }]
keywords = ["agent", "llm", "graph", "orchestration", "workflow", "langgraph", "rein", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "rein-agent>=0.2.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/MaLunan/rein-graph"
Repository = "https://github.com/MaLunan/rein-graph"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reingraph"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reingraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["reingraph"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
